--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
   <div id="login-wrapper" class="center card">
     <img src="ihh.png" alt="İHH Logo" draggable="false" aria-hidden="true" style="width: 120px; display: block; margin: 0 auto 1.2rem auto; border-radius: 1rem; box-shadow: 0 2px 12px #7ed95722;">
     <h2>Giriş Yap</h2>
-    <input type="password" id="pwd" placeholder="Şifre" autofocus />
+    <div class="password-row" style="position:relative;">
+      <input type="password" id="pwd" placeholder="Şifre" autofocus />
+      <button type="button" id="toggle-pwd" class="eye-btn" aria-label="Şifreyi Göster/Gizle">
+        <svg id="eye-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#7ed957" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <ellipse cx="12" cy="12" rx="8" ry="5"/>
+          <circle cx="12" cy="12" r="2"/>
+          <line id="eye-slash" x1="5" y1="19" x2="19" y2="5" style="display:none;" />
+        </svg>
+      </button>
+    </div>
+    <div class="remember-row">
+      <label class="remember-label">
+        <input type="checkbox" id="remember-me" />
+        <span class="custom-checkbox"></span>
+        <span class="remember-text">Beni hatırla</span>
+      </label>
+    </div>
     <button id="btn-login">Giriş</button>
     <p id="msg" class="error"></p>
   </div>
