--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <!-- marked.js: client‑side Markdown dönüştürücü -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
   <!-- LOGIN EKRANI -->
@@ -17,12 +19,15 @@
     <h2>Giriş Yap</h2>
     <div class="password-row" style="position:relative;">
       <input type="password" id="pwd" placeholder="Şifre" autofocus />
+      <button type="button" id="toggle-password" aria-label="Şifreyi göster/gizle">
+        <i class="bi bi-eye"></i>
+      </button>
     </div>
     <div class="remember-row">
       <label class="remember-label">
         <input type="checkbox" id="remember-me" />
         <span class="custom-checkbox"></span>
-        <span class="remember-text">Beni hatırla</span>
+        <span class="remember-text">Beni Hatırla</span>
       </label>
     </div>
     <button id="btn-login">Giriş</button>
